@@ -56,5 +56,16 @@
         <long>Update remote stations from radio.banshee-project.org</long>
       </locale>
     </schema>
+    <schema>
+      <key>/schemas/apps/banshee/plugins/radio/base_station_uri</key>
+      <applyto>/apps/banshee/plugins/radio/base_station_uri</applyto>
+      <owner>banshee</owner>
+      <type>string</type>
+      <default>http://radio.banshee-project.org/</default>
+      <locale name="C">
+        <short>URI for remote stations update</short>
+        <long>URI to update remote stations from</long>
+      </locale>
+    </schema>
   </schemalist>
 </gconfschemafile>
